# system-integration_individual

./: .gitignore  README.md
1._data-format-translation-servers/: Assignment.txt
1._data-format-translation-servers/files/: me.csv  me.json  me.xml
1._data-format-translation-servers/node/: app.js  package-lock.json  package.json  utils.js
1._data-format-translation-servers/python/: main.py
1._date-servers/: Assignment.txt
1._date-servers/node/: app.js  package.json
1._date-servers/python/: main.py  pyproject.toml
2._date-servers/: Assignments.txt
2._date-servers-documentation/client/: main.py  pyproject.toml
2._date-servers-documentation/node/: app.js  package-lock.json  package.json  swagger-output.json  swagger.js
2._date-servers-documentation/python/: main.py
2._date-servers/python/: main.py
file-formats-bonanza/: Assignment.txt
file-formats-bonanza/files/: me.txt  me.xml  me.yaml
file-formats-bonanza/node/: app.js  notes.txt  package-lock.json  package.json  txt-to-json.js
file-formats-bonanza/python/: main.py  pyproject.toml
