[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Astthor <a.bragason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
xmltodict = "^0.13.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"
fastapi = "^0.82.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
